--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <meta charset="UTF-8">
     <title>HTTPS Server</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" type="text/css" href="compiled/style.css" />
@@ -18,40 +17,34 @@
 </head>
 
 <script>
-    cardList = [];
-    for (var i = 0; i < 3; i += 1) {
-        cardList.push({ "headerContent": "" + i, "bodyContent": "" + (i + 1), "footerContent": "" + (i + 2) })
-    }
-    var ccontents = { "content": "some more stuff" }
-    var contents = { "content": "some stuff", "child": ccontents }
-    var inherited = { "childTemplate": contents }
     carouselList = [];
     for (var i = 0; i < 3; i += 1) {
         carouselList.push({ "isActive": i == 0 ? "active" : "", "captionTitle": "Title " + i, "captionText": "Here is some generic text " + i })
     }
-    var test = carouselList[0]
-    var test2 = carouselList[1]
-    var test3 = carouselList[2]
-
-    cData = { "children": carouselList }
-
+    let navElements = [{ "link": "#hello1", "title": "hello1" }, { "link": "#hello2", "title": "hello2" }, { "link": "#hello3", "title": "hello3" }]
 </script>
 
 <body>
-    <carousel-container data-template={}>
-        <carousel-item data-template=test>
-            <carousel-caption data-template=test>
-            </carousel-caption>
-        </carousel-item>
-        <carousel-item data-template=test2>
-            <carousel-caption data-template=test2>
-            </carousel-caption>
-        </carousel-item>
-        <carousel-item data-template=test3>
-            <carousel-caption data-template=test3>
-            </carousel-caption>
-        </carousel-item>
-    </carousel-container>
+    <bs-navbar>
+        <bs-navbar-item data-template=navElements>
+        </bs-navbar-item>
+    </bs-navbar>
+    <bs-carousel-container data-template={}>
+        <bs-carousel-item data-template={"isActive":"active"}>
+            <bs-carousel-caption data-template=carouselList[0]>
+            </bs-carousel-caption>
+        </bs-carousel-item>
+        <bs-carousel-item data-template={"isActive":""}>>
+            <bs-carousel-caption data-template=carouselList[1]>
+            </bs-carousel-caption>
+        </bs-carousel-item>
+        <bs-carousel-item data-template={"isActive":""}>>
+            <bs-carousel-caption data-template=carouselList[2]>
+            </bs-carousel-caption>
+        </bs-carousel-item>
+    </bs-carousel-container>
+    <bs-container>
+    </bs-container>
 </body>
 
 </html>
