--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,13 @@
                     </li>
                     <li>Data can be passed to components using the <code>data-template</code> attribute.</li>
                     <li>All components are styled with Bootstrap 5 for a modern look and feel.</li>
-                    <li class="mt-2"><strong>Note:</strong> Template and custom element names must be in the format <code>somestring-somestring</code> (contain a hyphen <code>-</code>). This is required by the browser's custom elements specification and is necessary for your components to work correctly.</li>
+                    <li class="mt-2"><strong>Note:</strong> Template and custom element names must be in the format
+                        <code>somestring-somestring</code> (contain a hyphen <code>-</code>). This is required by the
+                        browser's custom elements specification and is necessary for your components to work correctly.
+                    </li>
+                    <li class="mt-2"><strong>Build Step:</strong> You must run <code>python compile.py</code> to
+                        generate the JavaScript (<code>compiled/compiled.js</code>) that enables your custom template
+                        elements before starting the server.</li>
                 </ul>
                 <h4 class="mt-4">Example: Simple Template Usage</h4>
                 <pre><code>&lt;div is="bs-container"&gt;
