--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,29 @@
     <title>oJo Frontend Framework Demo</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" type="text/css" href="compiled/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <script src="/compiled/compiled.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+        // Smooth scroll with offset for fixed navbar
+        document.addEventListener('DOMContentLoaded', function () {
+            const navbar = document.querySelector('.navbar.fixed-top');
+            const offset = navbar ? navbar.offsetHeight + 8 : 64;
+            document.querySelectorAll('a.nav-link[href^="#"]').forEach(link => {
+                link.addEventListener('click', function (e) {
+                    const targetId = this.getAttribute('href').slice(1);
+                    const target = document.getElementById(targetId);
+                    if (target) {
+                        e.preventDefault();
+                        const top = target.getBoundingClientRect().top + window.scrollY - offset;
+                        window.scrollTo({ top, behavior: 'smooth' });
+                    }
+                });
+            });
+        });
+    </script>
 
 </head>
 
@@ -17,7 +38,7 @@
     <!-- Floating Navbar using custom elements -->
     <nav is="bs-navbar" class="navbar fixed-top bg-white shadow-sm">
         <li is="bs-navbar-item"
-            data-template='[{"link": "#carousel-section", "title": "Carousel"}, {"link": "#about-section", "title": "About"}, {"link": "#features-section", "title": "Features"}]'>
+            data-template='[{"link": "#about-section", "title": "About"}, {"link": "#features-section", "title": "Features"}]'>
         </li>
     </nav>
     <!-- Carousel Section -->
@@ -78,6 +99,24 @@
         &lt;div is="bs-carousel-item" data-template="{isActive:'active'}"&gt;
             &lt;div is="bs-carousel-caption" data-template="{captionTitle:'Nested!',captionText:'This is deeply nested.'}"&gt;&lt;/div&gt;
         &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+                <h5 class="mt-3">What this unrolls to at runtime:</h5>
+                <pre><code>&lt;div class="container"&gt;
+    &lt;div id="carouselExampleCaptions" class="carousel slide"&gt;
+        &lt;div class="carousel-indicators"&gt;...&lt;/div&gt;
+        &lt;div class="carousel-inner"&gt;
+            &lt;div class="carousel-item active"&gt;
+                &lt;img src="..." class="d-block w-100" alt=""&gt;
+                &lt;div class="carousel-caption d-none d-md-block"&gt;
+                    &lt;h5&gt;Nested!&lt;/h5&gt;
+                    &lt;p&gt;This is deeply nested.&lt;/p&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;button class="carousel-control-prev" ...&gt;...&lt;/button&gt;
+        &lt;button class="carousel-control-next" ...&gt;...&lt;/button&gt;
     &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
