--- a/www/index.html
+++ b/www/index.html
@@ -4,233 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>oJo Frontend Framework Demo</title>
+    <title>Getting Started</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" type="text/css" href="compiled/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <script src="/compiled/compiled.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script>
-        hljs.highlightAll();
-        // Smooth scroll with offset for fixed navbar
-        document.addEventListener('DOMContentLoaded', function () {
-            const navbar = document.querySelector('.navbar.fixed-top');
-            const offset = navbar ? navbar.offsetHeight + 8 : 64;
-            document.querySelectorAll('a.nav-link[href^="#"]').forEach(link => {
-                link.addEventListener('click', function (e) {
-                    const targetId = this.getAttribute('href').slice(1);
-                    const target = document.getElementById(targetId);
-                    if (target) {
-                        e.preventDefault();
-                        history.pushState(null, null, '#' + targetId);
-                        const top = target.getBoundingClientRect().top + window.scrollY - offset;
-                        window.scrollTo({ top, behavior: 'smooth' });
-                    }
-                });
-            });
-        });
-    </script>
-    <script>
-        const s1 = new WatchedObject({ link: "#intro-section", title: "Intro" });
-        const s2 = new WatchedObject({ link: "#examples-section", title: "Examples" });
-        const s3 = new WatchedObject({ link: "#watchedobject-section", title: "WatchedObject" });
-        const s4 = new WatchedObject({ link: "#template-format-section", title: "File Format" });
-        navbarData = [s1, s2, s3, s4];
-        carouselData = [
-            new WatchedObject({ isActive: 'active', altText: 'First slide', captionTitle: 'Welcome to oJo', captionText: 'A custom frontend framework to allow for simple creation of templates!' }),
-            new WatchedObject({ isActive: '', altText: 'Second slide', captionTitle: 'Reusable Components', captionText: 'Build UIs with HTML templates and custom elements.' })
-        ];
-        const navbar = new WatchedObject({ link: "#", name: "oJo" });
-    </script>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav is="bs-navbar" class="navbar fixed-top bg-white shadow-sm" data-template="navbar">
-        <li is="bs-navbar-item" data-template='navbarData'></li>
-    </nav>
-
-    <!-- Carousel Section -->
-    <div is="bs-carousel-container">
-        <div is="bs-carousel-item" data-template="carouselData">
-            <div is="bs-carousel-caption">
-            </div>
-        </div>
-    </div>
-    <!-- Intro Section -->
-    <section is="bs-section" id="intro-section">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <h2>About the oJo Frontend Framework</h2>
-                <p>
-                    This project uses a custom frontend framework oJo that
-                    allows you to build web UIs using HTML templates and custom elements. Instead of writing
-                    JavaScript-heavy code, you define your UI in HTML and use special <code>is="component-name"</code>
-                    attributes to render components.
-                </p>
-                <ul>
-                    <li>Templates are stored in <code>www/template/</code> as HTML files.</li>
-                    <li>Custom elements like <code>bs-navbar</code>, <code>bs-carousel-container</code>, and
-                        <code>bs-container</code> are rendered dynamically.
-                    </li>
-                    <li>Data can be passed to components using the <code>data-template</code> attribute.</li>
-                    <li class="mt-2"><strong>Note:</strong> Template and custom element names must be in the format
-                        <code>somestring-somestring</code> (contain a hyphen <code>-</code>). This is required by the
-                        browser's custom elements specification and is necessary for your components to work correctly.
-                    </li>
-                    <li class="mt-2"><strong>Build Step:</strong> You must run <code>python compile.py</code> to
-                        generate the JavaScript (<code>compiled/compiled.js</code>) that enables your custom template
-                        elements before starting the server.</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Examples Section -->
-    <section is="bs-section" id="examples-section">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <h2>Template Usage Examples</h2>
-                <h4 class="mt-4">Example: Simple Template Usage</h4>
-                <pre><code>&lt;div is="bs-container"&gt;
-    &lt;h1&gt;Hello World!&lt;/h1&gt;
-&lt;/div&gt;
-</code></pre>
-                <h4 class="mt-3">Example: Nested Templates Unrolling</h4>
-                <pre><code>&lt;div is="bs-container"&gt;
-    &lt;div is="bs-carousel-container"&gt;
-        &lt;div is="bs-carousel-item" data-template="{isActive:'active'}"&gt;
-            &lt;div is="bs-carousel-caption" data-template="{captionTitle:'Nested!',captionText:'This is deeply nested.'}"&gt;&lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-                <h5 class="mt-3">What this unrolls to at runtime:</h5>
-                <pre><code>&lt;div class="container"&gt;
-    &lt;div id="carouselExampleCaptions" class="carousel slide"&gt;
-        &lt;div class="carousel-indicators"&gt;...&lt;/div&gt;
-        &lt;div class="carousel-inner"&gt;
-            &lt;div class="carousel-item active"&gt;
-                &lt;img src="..." class="d-block w-100" alt=""&gt;
-                &lt;div class="carousel-caption d-none d-md-block"&gt;
-                    &lt;h5&gt;Nested!&lt;/h5&gt;
-                    &lt;p&gt;This is deeply nested.&lt;/p&gt;
-                &lt;/div&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;button class="carousel-control-prev" ...&gt;...&lt;/button&gt;
-        &lt;button class="carousel-control-next" ...&gt;...&lt;/button&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-                <p class="text-muted">The above single line of HTML will be expanded at runtime into a full
-                    carousel with all nested elements rendered and data applied, thanks to the oJo framework's template
-                    system.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- WatchedObject Section -->
-    <section is="bs-section" id="watchedobject-section">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <h2>About WatchedObject and Live Data Binding</h2>
-                <p>
-                    <strong>WatchedObject</strong> is a special JavaScript helper that lets you create objects whose
-                    properties are automatically observed for changes. When you use a <code>WatchedObject</code> as the
-                    data source for a component (by passing it to <code>data-template</code>), any changes you make to
-                    its properties in JavaScript will automatically update the corresponding element in the UI—no manual
-                    refresh or re-render is needed.
-                </p>
-                <ul>
-                    <li>Just create your data as <code>new WatchedObject({...})</code> and use it in your template.</li>
-                    <li>When you change a property (e.g. <code>myObj.title = 'New Title'</code>), the UI updates
-                        instantly.</li>
-                    <li>This enables true two-way data binding between your JavaScript and your HTML templates.</li>
-                </ul>
-                <h5 class="mt-3">Example: Live Data Binding</h5>
-                <pre><code>const navData = new WatchedObject({ title: 'Home', link: '#' });
-// ...
-// In your HTML:
- &lt;li is="bs-navbar-item" data-template="navData">&lt;/li>
-// ...
-// Later in JS:
-navData.title = 'Dashboard'; // The navbar item updates automatically!
-</code></pre>
-            </div>
-        </div>
-    </section>
-
-    <!-- Template File Format Section -->
-    <section is="bs-section" id="template-format-section">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <h2>oJo Template File Format</h2>
-                <p>
-                    <strong>oJo template files</strong> are plain HTML files stored in <code>www/template/</code>. Each
-                    file defines the structure for a custom element, using standard HTML and <code>&lt;slot&gt;</code>
-                    for content insertion. You can use <code>{{variable}}</code> placeholders anywhere in the template
-                    to inject data from your JavaScript objects.
-                </p>
-                <ul>
-                    <li><strong>File location:</strong> <code>www/template/your-component.html</code></li>
-                    <li><strong>Placeholders:</strong> Use <code>{{variable}}</code> to mark where data should be
-                        inserted.</li>
-                    <li><strong>Slots:</strong> Use <code>&lt;slot&gt;</code> to allow child content to be inserted.
-                    </li>
-                    <li><strong>Custom attributes:</strong> You can use <code>data-template</code> to pass data to the
-                        template.</li>
-                </ul>
-                <h5 class="mt-3">Example: Simple Template File</h5>
-                <pre><code>&lt;div class="container"&gt;
-    &lt;h1&gt;{{title}}&lt;/h1&gt;
-    &lt;slot&gt;&lt;/slot&gt;
-&lt;/div&gt;
-</code></pre>
-                <p class="text-muted">This template will render a Bootstrap container with a dynamic title and any child
-                    content placed inside the custom element.</p>
-                <h2>How &lt;style&gt; and &lt;script&gt; in Templates Work</h2>
-                <p>
-                    When you include <code>&lt;style&gt;</code> or <code>&lt;script&gt;</code> tags in your template
-                    files, the build process will automatically extract them and compile their contents into the
-                    appropriate output files:
-                </p>
-                <ul>
-                    <li><strong>&lt;style&gt; blocks</strong> from all templates are combined and written to
-                        <code>www/compiled/style.css</code>. This ensures all component styles are loaded globally and
-                        only once.
-                    </li>
-                    <li><strong>&lt;script&gt; blocks</strong> from all templates are combined and written to
-                        <code>www/compiled/compiled.js</code>. This allows you to define component-specific JavaScript
-                        that is loaded with your app.
-                    </li>
-                    <li>Neither <code>&lt;style&gt;</code> nor <code>&lt;script&gt;</code> tags are included in the
-                        final rendered HTML at runtime—they are extracted at build time for performance and
-                        maintainability.</li>
-                </ul>
-                <h5 class="mt-3">Example: Template with &lt;style&gt; and &lt;script&gt;</h5>
-                <pre><code>&lt;div class="my-widget"&gt;
-    &lt;h2&gt;{{title}}&lt;/h2&gt;
-    &lt;slot&gt;&lt;/slot&gt;
-&lt;/div&gt;
-&lt;style&gt;
-.my-widget { color: purple; }
-&lt;/style&gt;
-&lt;script&gt;
-console.log('Widget loaded!');
-&lt;/script&gt;
-</code></pre>
-                <p class="text-muted">When you run <code>python compile.py</code>, the CSS and JS above will be
-                    extracted and bundled into the global compiled files, not left in the HTML.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer class="text-center py-4 bg-light mt-5">
-        <small>&copy; 2025 oJo Frontend Framework Demo</small>
-    </footer>
 </body>
 
 </html>
